prevent sidenav from overlapping content

--- a/static/css/less_css/less/tba/tba_sidebar_nav.less
+++ b/static/css/less_css/less/tba/tba_sidebar_nav.less
@@ -1,6 +1,7 @@
 .tba-sidenav-affixed {
   @media (min-width: @screen-tablet) {
     position: fixed;
+    max-width: 160px;
   }
 }
 
